# Port-Authority-LLM

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/app/: server.py
client/: index.html  package-lock.json
client/src/: App.css  App.jsx
server/: README.md  pyproject.toml
server/app/: server.py
server/app/app/chromadb/: chroma.sqlite3
